<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.project.colorchips.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/resultText"
        android:textSize="@dimen/font_size"

        android:layout_marginTop="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />


    <TextView
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/shown"
        android:id="@+id/displayText"
        android:textSize="@dimen/large_font_size"

        android:layout_marginTop="8dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/displayText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:id="@+id/gridLayout">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color1"
            android:id="@+id/button1"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="fill"
            android:textAlignment="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color2"
            android:id="@+id/button2"
            android:layout_row="1"
            android:layout_column="0" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color3"
            android:id="@+id/button3"
            android:layout_row="2"
            android:layout_column="0" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/color4"
            android:id="@+id/button4"
            android:layout_row="3"
            android:layout_column="0" />
    </GridLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color5"
        android:id="@+id/button5"
        android:layout_below="@+id/gridLayout"
        android:layout_alignLeft="@+id/gridLayout"
        android:layout_alignStart="@+id/gridLayout"
        android:layout_alignRight="@+id/gridLayout"
        android:layout_alignEnd="@+id/gridLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/submit"
        android:layout_alignBaseline="@+id/button5"
        android:layout_alignBottom="@+id/button5"
        android:layout_alignRight="@+id/displayText"
        android:layout_alignEnd="@+id/displayText" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearButton"
        android:id="@+id/clear"
        android:layout_below="@+id/gridLayout"
        android:layout_alignLeft="@+id/displayText"
        android:layout_alignStart="@+id/displayText"
        android:layout_alignBottom="@+id/button5" />

</RelativeLayout>
